--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 
 [dependencies]
 macro = { path = "./macro" }
-uuid = { version = "1.19.0", optional = true }
+uuid = { version = "^1.10.0", optional = true }
 
 [features]
 default = []
