--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-macro = { path = "./macro" }
+sadaby_macro = { path = "./macro" }
 uuid = { version = "^1.10.0", optional = true }
 
 [features]
